--- a/jest.config.json
+++ b/jest.config.json
@@ -2,6 +2,7 @@
   "preset": "ts-jest",
   "testEnvironment": "node",
   "modulePathIgnorePatterns": [".dist", ".dev"],
+  "maxWorkers": 1,
   "globals": {
     "ts-jest": {
       "isolatedModules": true
