--- a/5.1-real-life-scenario/package.json
+++ b/5.1-real-life-scenario/package.json
@@ -22,15 +22,15 @@
     "typeorm": "0.3.7"
   },
   "devDependencies": {
-    "@micro-package/axios": "1.0.6",
-    "@micro-package/container": "1.0.6",
-    "@micro-package/express": "1.0.6",
-    "@micro-package/storyteller": "1.0.8",
-    "@micro-package/typeorm": "^1.0.8",
+    "@micro-package/axios": "1.0.7",
+    "@micro-package/container": "1.0.7",
+    "@micro-package/express": "1.0.7",
+    "@micro-package/storyteller": "1.0.9",
+    "@micro-package/typeorm": "1.0.9",
     "@types/express": "4.17.13",
     "@types/jest": "29.2.2",
     "jest": "29.3.1",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
   },
