--- a/5.1-real-life-scenario/package.json
+++ b/5.1-real-life-scenario/package.json
@@ -7,7 +7,8 @@
     "node": ">=12"
   },
   "scripts": {
-    "start": "./node_modules/.bin/ts-node src/index.ts"
+    "start": "./node_modules/.bin/ts-node src/index.ts",
+    "test": "./node_modules/.bin/jest --runInBand --config jest.config.json"
   },
   "author": "Łukasz Klejszta",
   "license": "UNLICENSED",
