feat: apply fix for having multiple it`s in one file

--- a/5.1-real-life-scenario/package.json
+++ b/5.1-real-life-scenario/package.json
@@ -27,7 +27,7 @@
     "@micro-package/container": "1.0.7",
     "@micro-package/express": "1.0.8",
     "@micro-package/storyteller": "1.0.12",
-    "@micro-package/typeorm": "1.0.10",
+    "@micro-package/typeorm": "^1.0.10",
     "@types/express": "4.17.13",
     "@types/jest": "29.2.2",
     "jest": "29.3.1",
