--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">=12"
   },
   "scripts": {
+    "test": "./node_modules/.bin/jest --runInBand --config jest.config.json",
     "test-lint": "./node_modules/.bin/eslint -c ./eslint.json --ext .ts ./",
     "test-types": "./node_modules/.bin/tsc --project ./tsconfig.json"
   },
