--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
     "axios": "0.27.2"
   },
   "devDependencies": {
-    "@types/express-serve-static-core": "4.17.31",
-    "@types/jest": "29.2.2",
-    "jest": "29.3.1",
-    "typescript": "4.7.4",
-    "husky": "^7.0.4",
-    "prettier": "2.7.1",
     "@commitlint/cli": "16.2.1",
     "@commitlint/config-conventional": "16.2.1",
+    "@types/express-serve-static-core": "4.17.31",
+    "@types/jest": "29.2.2",
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
     "eslint": "8.9.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
@@ -42,8 +40,10 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-unicorn": "41.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "@typescript-eslint/eslint-plugin": "5.30.6",
-    "@typescript-eslint/parser": "5.30.6"
+    "husky": "^7.0.4",
+    "jest": "29.3.1",
+    "prettier": "2.7.1",
+    "typescript": "4.7.4"
   },
   "repository": {
     "type": "git",
