--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/micro-package.git"
+    "url": "git+https://github.com/micro-package/examples.git"
   },
   "bugs": {
-    "url": "https://github.com/micro-package/issues"
+    "url": "https://github.com/micro-package/examples/issues"
   },
-  "homepage": "https://github.com/micro-package#readme",
+  "homepage": "https://github.com/micro-package/examples#readme",
   "description": ""
 }
