--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@micro-package/container": "1.0.7",
     "@micro-package/express": "1.0.8",
     "@micro-package/storyteller": "1.0.12",
-    "axios": "0.27.2"
+    "axios": "0.27.2",
+    "http-method-enum": "^1.0.0",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "16.2.1",
