--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
   "author": "Łukasz Klejszta",
   "license": "UNLICENSED",
   "dependencies": {
-    "@micro-package/axios": "1.0.8",
-    "@micro-package/container": "1.0.7",
-    "@micro-package/express": "1.0.8",
-    "@micro-package/storyteller": "1.0.12",
+    "@micro-package/storyteller": "1.1.0",
+    "@ngneat/falso": "^6.4.0",
     "axios": "0.27.2",
     "http-method-enum": "^1.0.0",
     "http-status-codes": "^2.2.0"
