--- a/5.1-real-life-scenario/package.json
+++ b/5.1-real-life-scenario/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/index.ts",
-    "test": "./node_modules/.bin/jest --runInBand --config jest.config.json"
+    "test": "./node_modules/.bin/jest --runInBand --config jest.config.json",
+    "d-test": "docker-compose --env-file=.env run --service-ports $npm_config_args js npm run test"
   },
   "author": "Łukasz Klejszta",
   "license": "UNLICENSED",
@@ -22,11 +23,12 @@
     "typeorm": "0.3.7"
   },
   "devDependencies": {
+    "ts-jest": "28.0.8",
     "@micro-package/storyteller": "1.1.2",
     "@types/express": "4.17.13",
-    "@types/jest": "29.2.2",
+    "@types/jest": "27.5.1",
     "http-status-codes": "^2.2.0",
-    "jest": "29.3.1",
+    "jest": "28.1.0",
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
   }
