feat: apply fixes in order to connect with storyteller service and pass hook data

--- a/5.1-real-life-scenario/.env.dist
+++ b/5.1-real-life-scenario/.env.dist
@@ -5,3 +5,4 @@ POSTGRES_DB=app
 APP_ENV=test
 APP_PORT=3000
 MOCK_SERVER_PORT=5545
+STORYTELLER_WEBSOCKET_URL=ws://localhost:8010/websocket/websocket
