--- a/5.1-real-life-scenario/package.json
+++ b/5.1-real-life-scenario/package.json
@@ -23,12 +23,13 @@
     "typeorm": "0.3.7"
   },
   "devDependencies": {
-    "ts-jest": "28.0.8",
-    "@micro-package/storyteller": "1.1.3",
+    "@micro-package/storyteller": "1.1.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.5.1",
     "http-status-codes": "^2.2.0",
     "jest": "28.1.0",
+    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
   }
