--- a/5.1-real-life-scenario/package.json
+++ b/5.1-real-life-scenario/package.json
@@ -23,7 +23,7 @@
     "typeorm": "0.3.7"
   },
   "devDependencies": {
-    "@micro-package/storyteller": "1.1.5",
+    "@micro-package/storyteller": "^1.1.18",
     "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.5.1",
